plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.qr.apigateway'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'javax.servlet:javax.servlet-api:4.0.1'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'


	implementation 'org.bouncycastle:bc-fips:1.0.2.5'
//	implementation 'org.bouncycastle:bcpkix-fips:1.0.7'
	implementation 'org.bouncycastle:bctls-fips:1.0.12'

	implementation group:'net.snowflake',name:'snowflake-jdbc',version:'3.21.0'
	implementation group:'net.snowflake',name:'snowflake-jdbc-fips',version:'3.21.0'
	implementation group:'net.snowflake',name:'snowflake-jdbc-thin',version:'3.21.0'

	implementation 'javax.persistence:javax.persistence-api:2.2'
	implementation 'com.microsoft.sqlserver:mssql-jdbc'
	//runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'

}

tasks.named('test') {
	useJUnitPlatform()
}
tasks.withType(JavaExec) {
	jvmArgs += '--add-opens=java.base/java.nio=ALL-UNNAMED'}
